oxidized/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oxidized
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oxidized
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: oxidized
    spec:
      containers:
      - image: oxidized/oxidized
        name: oxidized
        ports:
        - containerPort: 8888
          name: oxidized
        volumeMounts:
        - name: oxidized-persistent-storage
          mountPath: /root/.config/oxidized
      volumes:
      - name: oxidized-persistent-storage
        persistentVolumeClaim:
          claimName: oxidized-pv-claim
