oxidized/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oxidized
spec:
  type: NodePort
  ports:
   - nodePort: 30163
     port: 80
     targetPort: 8888
  selector:
    app: oxidized
