oxidized/ingress-tls.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: oxidized
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/issuer-name: ca-issuer
spec:
  tls:
  - hosts:
    - oxidized.ittlabb.net
    secretName: oxidized-cert-tls
  rules:
  - host: oxidized.ittlabb.net
    http:
      paths:
      - path: /
        backend:
          serviceName: oxidized
          servicePort: 80
